<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.googlemap_demo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="7dp"
        android:orientation="vertical">

        <!--  Toolbar  -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <!--  TextViews to switch between different type of maps  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/normal_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/normal"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/hybrid_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/hybrid"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/satellite_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/satellite"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/terrain_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/terrain"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/none_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/none"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorAccent" />

        <!--  TextView for displaying Location on every update -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/current_location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="11sp" />

    </LinearLayout>

    <!--  Google Map Use Support Map Fragment class to Support all Devices else use MapFragment  -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
